@@ -21,12 +21,3 @@ void foo (void)
 }
 // Listing 1
 
-#else
-#include "ace/OS_NS_stdio.h"
-
-int ACE_TMAIN (int, ACE_TCHAR *[])
-{
-  ACE_OS::puts ("This example only works on g++ 2.96 and later.\n");
-  return 0;
-}
-
